Add menu fold icon.

--- a/css/view.css
+++ b/css/view.css
@@ -6,3 +6,8 @@
 #wpadminbar .menupop .ab-sub-wrapper, #wpadminbar .shortlink-input {
   bottom: 32px;
 }
+
+.admin-bar-fold a:before {
+  display: block;
+  content: "\f229";
+}
