--- a/css/view.css
+++ b/css/view.css
@@ -3,6 +3,26 @@
   bottom: 0;
 }
 
+@media screen and ( max-width: 600px ) {
+  #wpadminbar {
+    position: fixed;
+  }
+}
+
 #wpadminbar .menupop .ab-sub-wrapper, #wpadminbar .shortlink-input {
   bottom: 32px;
+}
+
+@media screen and ( max-width: 782px ) {
+  #wpadminbar .menupop .ab-sub-wrapper, #wpadminbar .shortlink-input {
+    bottom: 46px;
+  }
+}
+
+
+/* For Twenty Fourteen */
+@media screen and (min-width: 783px) {
+  .admin-bar.masthead-fixed .site-header {
+    top: 0;
+  }
 }
