--- a/css/view.css
+++ b/css/view.css
@@ -1,28 +1,1 @@
-#wpadminbar {
-  top: auto;
-  bottom: 0;
-}
-
-@media screen and ( max-width: 600px ) {
-  #wpadminbar {
-    position: fixed;
-  }
-}
-
-#wpadminbar .menupop .ab-sub-wrapper, #wpadminbar .shortlink-input {
-  bottom: 32px;
-}
-
-@media screen and ( max-width: 782px ) {
-  #wpadminbar .menupop .ab-sub-wrapper, #wpadminbar .shortlink-input {
-    bottom: 46px;
-  }
-}
-
-
-/* For Twenty Fourteen */
-@media screen and (min-width: 783px) {
-  .admin-bar.masthead-fixed .site-header {
-    top: 0;
-  }
-}
+#wpadminbar{top:auto;bottom:0}@media screen and (max-width: 600px){#wpadminbar{position:fixed}}#wpadminbar .menupop .ab-sub-wrapper,#wpadminbar .shortlink-input{bottom:32px}@media screen and (max-width: 782px){#wpadminbar .menupop .ab-sub-wrapper,#wpadminbar .shortlink-input{bottom:46px}}@media screen and (min-width: 783px){.admin-bar.masthead-fixed .site-header{top:0}}
